# tael

./: .coderabbit.yaml  .gitignore  AGENTS.md  Cargo.toml  README.md  input.txt  justfile
.github/workflows/: ci.yml
examples/: raw_test.rs
src/: config.rs  file.rs  lib.rs  main.rs  parse.rs  render.rs  tui.rs  types.rs
thoughts/: backlog.md
