[package]
name = "tael"
version = "0.1.0"
edition = "2021"
description = "Terminal-agnostic agent inbox TUI - track AI assistant status across panes"
license = "MIT"
keywords = ["cli", "tui", "agent", "terminal", "multiplexer"]
categories = ["command-line-utilities"]

[[bin]]
name = "tael"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
ratatui = "0.29"
# use-dev-tty: read from /dev/tty instead of stdin (needed for zellij Run)
crossterm = { version = "0.28", features = ["use-dev-tty"] }
dirs = "6"
shell-words = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
insta = { version = "1.45.1", features = ["yaml"] }
tempfile = "3"
